--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Cache-Control" content="no-store" />
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="-1" />
-		<title>Rosling</title>
+		<title>Gistlyn</title>
 		<!-- Bootstrap -->
 		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Offsets -->
@@ -34,10 +34,45 @@
 					<div class="col-md-6">
 						<input id="gistId" class="form-control" type="text" placeholder="Enter gist hash code">
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-4">
 						<button id="load" type="button" class="btn btn-primary">Load</button>
+                        <button id="multirun" type="button" class="btn btn-primary" style="display:none">Run Multiple</button>
 					</div>
 				</div>
+			</div>
+            <div id="multirunBlock">
+                <div class="role-gistresult" style="display: none;">
+                    <div class="row voffset3" style="display: none">
+                        <div class="col-md-10">
+                            <table class="table table-striped role-variables">
+                                <thead>
+                                    <tr><th>Name</th><th>Value</th><th>Type</th></tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="row voffset3" style="display: none">
+                        <div class="col-md-10">
+                            <table class="table table-striped role-errors">
+                                <thead>
+                                    <tr><th>Errors</th></tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="row voffset3" style="display: none">
+                        <div class="col-md-6 col-md-offset-2">
+                            <div class="alert alert-danger" role="alert">
+                                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                                <span class="role-exception"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 			</div>
             <script id="gists-template" type="text/x-handlebars-template">
 			{{#each files}}
@@ -89,6 +124,7 @@
             {{/each}}
 			</script>
 			<div id="gistlist"></div>
+		</div>
 		<script>
 			$(document).ready(function(){
 			    gateway = new servicestack.ClientGateway('/ServiceStack/');
