Added reference to sample gist

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -32,7 +32,7 @@
 				<div class="form-group">
 					<label class="col-md-2 control-label">Gist ID (Hash Code)</label>
 					<div class="col-md-6">
-						<input id="gistId" class="form-control" type="text" placeholder="Enter gist hash code">
+						<input id="gistId" class="form-control" type="text" placeholder="Enter gist hash code" value="cce30aa237ca7f3b51a97f0fa84b37e0">
 					</div>
 					<div class="col-md-4">
 						<button id="load" type="button" class="btn btn-primary">Load</button>
