added first version of search in installed packages

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -60,6 +60,19 @@
                     </div>
                 </div>
             </div>
+            <div class="row voffset3">
+                <div class="form-group required">
+                   <label class="col-md-2 control-label">Installed Packages</label>
+                   <div class="col-md-6">
+                        <div>
+                            <input class="form-control" placeholder="Search Installed Packages" autocomplete="off" type="text" id="installedPackages" data-provide="typeahead"> 
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <button id="addReference" type="button" class="btn btn-primary" style="display:none">Add Package as Reference</button>
+                    </div>
+                </div>
+            </div>
             <div id="multirunBlock">
                 <div class="role-gistresult" style="display: none;">
                     <div class="row voffset3" style="display: none">
