Added console output for run multiple

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -128,6 +128,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row voffset3">
+                        <div class="form-group">
+                           <label class="col-md-2 control-label">Console Output</label>
+                            <div class="col-md-6">
+    							<textarea class="form-control role-console" rows="10"></textarea>
+                            </div>
+						</div>
+                    </div>
                 </div>
 			</div>
             <script id="gists-template" type="text/x-handlebars-template">
@@ -172,6 +180,14 @@
                                 <div class="alert alert-danger" role="alert">
                                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                                     <span class="role-exception"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row voffset3">
+                            <div class="form-group">
+                               <label class="col-md-2 control-label">Console Output</label>
+                                <div class="col-md-6">
+                                    <textarea class="role-console" rows="10"></textarea>
                                 </div>
                             </div>
                         </div>
