Added server events
Added base for server events supscriptions
Added AppDomain distinguishing for running scripts to support console on-line
publishing for long-running tasks.

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -26,6 +26,8 @@
         <script type="text/javascript" src="bower_components/bootstrap3-typeahead/bootstrap3-typeahead.min.js"></script>
 		<!-- Handlebars -->
         <script src="bower_components/handlebars/handlebars.min.js"></script>
+		<!-- Server events -->
+        <script type="text/javascript" src="js/ss-utils.js"></script>
 		<!-- Gistlyn scripts -->
 		<script type="text/javascript" src="js/rosling.js"></script>
 
