--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -100,11 +100,21 @@
             </script>
             <div id="multirunBlock">
                 <div class="role-gistresult" style="display: none;">
+					<div class="row voffset3">
+                        <div class="form-group">
+                            <div class="col-md-2">
+                                <button class="btn btn-primary role-getvariables">Get Variables</button>
+                            </div>
+                            <div class="col-md-4">
+                                <span class="role-runningState"></span>
+                            </div>
+                        </div>
+					</div>
                     <div class="row voffset3" style="display: none">
                         <div class="col-md-10">
                             <table class="table table-striped role-variables">
                                 <thead>
-                                    <tr><th>Name</th><th>Value</th><th>Type</th></tr>
+                                    <tr><th>Name</th><th>Value</th><th>Type</th><th></th></tr>
                                 </thead>
                                 <tbody>
                                 </tbody>
