Added cancelling running scripts

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -46,6 +46,7 @@
 					<div class="col-md-4">
 						<button id="load" type="button" class="btn btn-primary">Load</button>
                         <button id="multirun" type="button" class="btn btn-primary" style="display:none">Run</button>
+                        <button id="cancel" type="button" class="btn btn-primary" style="display:none">Cancel</button>
 					</div>
 				</div>
 			</div>
