Changed variables to camelCase

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -96,7 +96,7 @@
 			</div>
             <script id="references-template" type="text/x-handlebars-template">
                 {{#each references}}
-            		<li>{{this.Name}} [{{this.Path}}]</li>
+            		<li>{{this.name}} [{{this.path}}]</li>
                 {{/each}}
             </script>
             <div id="multirunBlock">
