Added inspect variable button

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -115,7 +115,7 @@
                         <div class="col-md-10">
                             <table class="table table-striped role-variables">
                                 <thead>
-                                    <tr><th>Name</th><th>Value</th><th>Type</th><th></th></tr>
+                                    <tr><th>Name</th><th>Value</th><th>Type</th><th></th><th></th></tr>
                                 </thead>
                                 <tbody>
                                 </tbody>
