Added traversing variables

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -107,6 +107,9 @@
                                 <button class="btn btn-primary role-getvariables">Get Variables</button>
                             </div>
                             <div class="col-md-4">
+                                <span class="role-parentVariable"></span>
+                            </div>
+                            <div class="col-md-4">
                                 <span class="role-runningState"></span>
                             </div>
                         </div>
