Added showing ScriptStatus on the page
Fixed disabled "run" button on script completion

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -37,6 +37,14 @@
 			<div class="pageheader">
 				<h2>Gist execution via Roslyn</h2>
 			</div>
+            <div class="row">
+                <div class="form-group">
+                    <label class="col-md-2 control-label">Script Status</label>
+                    <div class="col-md-6">
+						<span id="scriptStatus"></span>
+                    </div>
+                </div>
+            </div>
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-2 control-label">Gist ID (Hash Code)</label>
