Added getting evaluate expression on UI

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -109,6 +109,20 @@
             </script>
             <div id="multirunBlock">
                 <div class="role-gistresult" style="display: none;">
+                    <div class="row voffset3">
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Evaluate Expression</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control role-expression" />
+                            </div>
+                            <div class="col-md-2">
+                                <button class="btn btn-primary role-evaluate">Evaluate</button>
+                            </div>
+                            <div class="col-md-2">
+                                <span class="role-evaluateRunningState"></span>
+                            </div>
+                        </div>
+                    </div>
 					<div class="row voffset3">
                         <div class="form-group">
                             <div class="col-md-2">
