--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -123,6 +123,40 @@
                             </div>
                         </div>
                     </div>
+					<!-- expression results -->
+					<div id="expressionResult">
+                        <div class="row voffset3" style="display: none">
+                            <div class="col-md-10">
+                                <table class="table table-striped role-expressionVariables">
+                                    <thead>
+                                        <tr><th>Result</th><th>Type</th></tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="row voffset3" style="display: none">
+                            <div class="col-md-10">
+                                <table class="table table-striped role-expressionErrors">
+                                    <thead>
+                                        <tr><th>Errors</th></tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="row voffset3" style="display: none">
+                            <div class="col-md-6 col-md-offset-2">
+                                <div class="alert alert-danger" role="alert">
+                                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                                    <span class="role-expressionException"></span>
+                                </div>
+                            </div>
+                        </div>
+					</div>
+					<!-- end of expression results -->
 					<div class="row voffset3">
                         <div class="form-group">
                             <div class="col-md-2">
