Fixed javascript syntax errors

--- a/Gistlyn/Gistlyn/sampleinclude.html
+++ b/Gistlyn/Gistlyn/sampleinclude.html
@@ -34,7 +34,7 @@
                 <h2>Include gists</h2>
             </div>
             <div class="row">
-				<script text="servicestack/json/reply/getincludescript?gist=6831799881c92434f80e141c8a2699eb&nocache=true">
+				<script type="text/javascript" src="servicestack/json/reply/getincludescript?gist=6831799881c92434f80e141c8a2699eb&nocache=true"></script>
             </div>
        </div>
     </body>
