--- a/Gistlyn/Gistlyn/sampleinclude.html
+++ b/Gistlyn/Gistlyn/sampleinclude.html
@@ -22,10 +22,19 @@
 
             <!-- Main jumbotron for a primary marketing message or call to action -->
             <div class="pageheader">
-                <h2>Include gists</h2>
+                <h2>Included gists</h2>
             </div>
+			<p>
+			    Sample gist without caching	
+			</p>
             <div class="row">
-				<script type="text/javascript" src="servicestack/json/reply/getincludescript?gist=6831799881c92434f80e141c8a2699eb&nocache=true"></script>
+				<script type="text/javascript" src="servicestack/json/reply/getincludescript?gist=e3e3be8263623c96f7cf8f08c1ecbd0f&nocache=true"></script>
+            </div>
+			<p>
+                Compute MD5 of string (with caching results)
+			</p>
+            <div class="row">
+                <script type="text/javascript" src="servicestack/json/reply/getincludescript?gist=82e68389d6ccc757948d462e406af6b6"></script>
             </div>
        </div>
     </body>
