Added csharp visual mode for CodeMirror

--- a/Gistlyn/Gistlyn/sampleinclude.html
+++ b/Gistlyn/Gistlyn/sampleinclude.html
@@ -18,6 +18,10 @@
         <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <!-- Code mirror -->
 		<script type="text/javascript" src="bower_components/CodeMirror/lib/codemirror.js"></script>
+        <script src="bower_components/CodeMirror/addon/edit/matchbrackets.js"></script>
+        <script src="bower_components/CodeMirror/addon/comment/continuecomment.js"></script>
+        <script src="bower_components/CodeMirror/mode/clike/clike.js"></script>
+        <!-- <script type="text/javascript" src="bower_components/CodeMirror/mode/mode.js"></script> -->
         <!-- Gistlyn scripts -->
         <script type="text/javascript" src="js/gistlyn.js"></script>
 
