Added CodeMirror to the main page

--- a/Gistlyn/Gistlyn/index.html
+++ b/Gistlyn/Gistlyn/index.html
@@ -11,6 +11,8 @@
 		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap Dialog -->
         <link href="bower_components/bootstrap3-dialog/dist/css/bootstrap-dialog.min.css" rel="stylesheet" type="text/css" />
+		<!-- Code Mirror -->
+        <link rel="stylesheet" href="bower_components/CodeMirror/lib/codemirror.css">
         <!-- Offsets -->
 		<link href="css/offset.css" rel="stylesheet">
 	</head>
@@ -28,6 +30,11 @@
         <script src="bower_components/handlebars/handlebars.min.js"></script>
 		<!-- Server events -->
         <script type="text/javascript" src="js/ss-utils.js"></script>
+        <!-- Code mirror -->
+        <script type="text/javascript" src="bower_components/CodeMirror/lib/codemirror.js"></script>
+        <script src="bower_components/CodeMirror/addon/edit/matchbrackets.js"></script>
+        <script src="bower_components/CodeMirror/addon/comment/continuecomment.js"></script>
+        <script src="bower_components/CodeMirror/mode/clike/clike.js"></script>
 		<!-- Gistlyn scripts -->
 		<script type="text/javascript" src="js/rosling.js"></script>
 
