rename gistlyn.js to gistlyn-embed.js and rosling.js to gistlyn.js

--- a/src/Gistlyn.TestHost/index.html
+++ b/src/Gistlyn.TestHost/index.html
@@ -36,7 +36,7 @@
         <script src="bower_components/CodeMirror/addon/comment/continuecomment.js"></script>
         <script src="bower_components/CodeMirror/mode/clike/clike.js"></script>
 		<!-- Gistlyn scripts -->
-		<script type="text/javascript" src="js/rosling.js"></script>
+		<script type="text/javascript" src="js/gistlyn.js"></script>
 
 		<div class="container theme_showcase">
 
