--- a/src/Gistlyn.TestHost/sampleinclude.html
+++ b/src/Gistlyn.TestHost/sampleinclude.html
@@ -23,7 +23,7 @@
         <script src="bower_components/CodeMirror/mode/clike/clike.js"></script>
         <!-- <script type="text/javascript" src="bower_components/CodeMirror/mode/mode.js"></script> -->
         <!-- Gistlyn scripts -->
-        <script type="text/javascript" src="js/gistlyn.js"></script>
+        <script type="text/javascript" src="js/gistlyn-embed.js"></script>
 
         <div class="container theme_showcase">
 
