--- a/src/Gistlyn/default.html
+++ b/src/Gistlyn/default.html
@@ -2,53 +2,48 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <!--htmlbuild:bootstrapCss -->
-    <link rel="stylesheet" href="jspm_packages/npm/bootstrap@3.2.0/css/bootstrap.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+    <!--htmlbuild:codemirrorCss -->
+    <link rel="stylesheet" href="jspm_packages/npm/codemirror@5.16.0/lib/codemirror.css" />
     <!-- endbuild -->
+
     <!--build:css css/app.min.css-->
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/codemirror.css" />
     <!-- endbuild -->
+
     <title>Gistlyn</title>
 </head>
 <body>
-    <div class="navbar navbar-inverse" role="navigation">
+
+<div id="body">
+    <div class="titlebar">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Gistlyn</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
+            <img id="logo" src="img/logo-32-inverted.png" />
+            <h3>Gistlyn</h3> <sup style="padding: 0 0 0 5px; font-size: 12px; font-style: italic">BETA</sup>
         </div>
     </div>
-	
-    <div class="container">
-        <div id="content"></div>
-    </div>
-	    
-	<!-- build:js system.js -->
-    <script src="jspm_packages/system.js"></script>
-    <!-- endbuild -->
 
-    <script src="config.js"></script>
+    <div id="content"></div>
 
-    <!-- build:remove -->
-    <script src="deps.lib.js"></script>
-    <!-- endbuild -->
-	
-    <!-- htmlbuild:appbundle -->
-    <!-- endbuild -->
-	
-    <script>
-        System.import("./src/app");
-    </script>
+    <div id="footer"></div>
+</div>
+
+
+<!-- build:js system.js -->
+<script src="jspm_packages/system.js"></script>
+<!-- endbuild -->
+<script src="config.js"></script>
+<!-- build:remove -->
+<script src="deps.lib.js"></script>
+<!-- endbuild -->
+<!-- htmlbuild:appbundle -->
+<!-- endbuild -->
+
+<script>
+    System.import("./src/app");
+</script>
+
 </body>
 </html>
