--- a/src/Gistlyn/default.html
+++ b/src/Gistlyn/default.html
@@ -17,19 +17,7 @@
 </head>
 <body>
 
-<div id="body">
-    <div class="titlebar">
-        <div class="container">
-            <img id="logo" src="img/logo-32-inverted.png" />
-            <h3>Gistlyn</h3> <sup style="padding: 0 0 0 5px; font-size: 12px; font-style: italic">BETA</sup>
-        </div>
-    </div>
-
-    <div id="content"></div>
-
-    <div id="footer"></div>
-</div>
-
+<div id="app"></div>
 
 <!-- build:js system.js -->
 <script src="jspm_packages/system.js"></script>
