Add self-hosted Material/Octicon/Robonto fonts

--- a/src/Gistlyn/default.html
+++ b/src/Gistlyn/default.html
@@ -2,11 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-    <!--htmlbuild:codemirrorCss -->
-    <link rel="stylesheet" href="jspm_packages/npm/codemirror@5.16.0/lib/codemirror.css" />
-    <!-- endbuild -->
+    <link href="css/iconfont/material-icons.css" rel="stylesheet" />
+    <link href="css/octicon/octicon.css" rel="stylesheet" />
 
     <!--build:css css/app.min.css-->
     <link rel="stylesheet" href="css/app.css" />
