--- a/src/Gistlyn.Resources/default.html
+++ b/src/Gistlyn.Resources/default.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
 
-    <link href="css/iconfont/material-icons.css" rel="stylesheet" />
-    <link href="css/octicon/octicon.css" rel="stylesheet" />
+    <link href="/css/iconfont/material-icons.css" rel="stylesheet" />
+    <link href="/css/octicon/octicon.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/app.min.css">
 
@@ -24,6 +24,8 @@
 <script>
     System.import("./src/app");
 </script>
+
+<script src="platform.js"></script>
 
 </body>
 </html>
