--- a/src/Gistlyn/default.html
+++ b/src/Gistlyn/default.html
@@ -3,12 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
 
-    <link href="css/iconfont/material-icons.css" rel="stylesheet" />
-    <link href="css/octicon/octicon.css" rel="stylesheet" />
+    <link href="/css/iconfont/material-icons.css" rel="stylesheet" />
+    <link href="/css/octicon/octicon.css" rel="stylesheet" />
 
     <!--build:css css/app.min.css-->
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="css/codemirror.css" />
+    <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/codemirror.css" />
     <!-- endbuild -->
 
     <link rel="stylesheet" href="/platform.css" />
@@ -32,6 +32,8 @@
 <script>
     System.import("./src/app");
 </script>
+
+<script src="platform.js"></script>
 
 </body>
 </html>
