--- a/src/Gistlyn/default.html
+++ b/src/Gistlyn/default.html
@@ -6,7 +6,7 @@
     <link href="/css/iconfont/material-icons.css" rel="stylesheet" />
     <link href="/css/octicon/octicon.css" rel="stylesheet" />
 
-    <!--build:css css/app.min.css-->
+    <!--build:css /css/app.min.css-->
     <link rel="stylesheet" href="/css/app.css" />
     <link rel="stylesheet" href="/css/codemirror.css" />
     <!-- endbuild -->
@@ -19,12 +19,12 @@
 
 <div id="app"></div>
 
-<!-- build:js system.js -->
-<script src="jspm_packages/system.js"></script>
+<!-- build:js /system.js -->
+<script src="/jspm_packages/system.js"></script>
 <!-- endbuild -->
-<script src="config.js"></script>
+<script src="/config.js"></script>
 <!-- build:remove -->
-<script src="deps.lib.js"></script>
+<script src="/deps.lib.js"></script>
 <!-- endbuild -->
 <!-- htmlbuild:appbundle -->
 <!-- endbuild -->
@@ -33,7 +33,7 @@
     System.import("./src/app");
 </script>
 
-<script src="platform.js"></script>
+<script src="/platform.js"></script>
 
 </body>
 </html>
