--- a/src/Gistlyn.Resources/default.html
+++ b/src/Gistlyn.Resources/default.html
@@ -6,7 +6,7 @@
     <link href="/css/iconfont/material-icons.css" rel="stylesheet" />
     <link href="/css/octicon/octicon.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/app.min.css">
+    <link rel="stylesheet" href="/css/app.min.css">
 
     <link rel="stylesheet" href="/platform.css" />
 
@@ -16,16 +16,16 @@
 
 <div id="app"></div>
 
-<script src="system.js"></script>
-<script src="config.js"></script>
+<script src="/system.js"></script>
+<script src="/config.js"></script>
 
-<script src="app.js"></script>
+<script src="/app.js"></script>
 
 <script>
     System.import("./src/app");
 </script>
 
-<script src="platform.js"></script>
+<script src="/platform.js"></script>
 
 </body>
 </html>
