Extract and modularize app.tsx and app.css into different components

--- a/src/Gistlyn/default.html
+++ b/src/Gistlyn/default.html
@@ -7,7 +7,11 @@
     <link href="/css/octicon/octicon.css" rel="stylesheet" />
 
     <!--build:css /css/app.min.css-->
+    <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/collections.css" />
+    <link rel="stylesheet" href="/css/dialogs.css" />
+    <link rel="stylesheet" href="/css/editor.css" />
     <link rel="stylesheet" href="/css/codemirror.css" />
     <!-- endbuild -->
 
