--- a/src/Gistlyn.Resources/default.html
+++ b/src/Gistlyn.Resources/default.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="/platform.css" />
 
-    <title>Gistlyn</title>
+    <title>Gistlyn - Your C# Gist IDE in the Sky!</title>
 </head>
 <body>
 
