Fixes for Winforms

--- a/src/Gistlyn.Resources/default.html
+++ b/src/Gistlyn.Resources/default.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="description" content="Gistlyn lets you create, run and share your executable C# Github Gists. Powered by Roslyn C# Scripting, bring a Gist with a main.cs and Gistlyn will run it for you!" />
 
     <link href="/css/iconfont/material-icons.css" rel="stylesheet" />
     <link href="/css/octicon/octicon.css" rel="stylesheet" />
