--- a/src/Gistlyn/offline.html
+++ b/src/Gistlyn/offline.html
@@ -80,7 +80,7 @@
         <p>&nbsp;</p>
 
         <p>
-            Follow <a href="twitter.com/gistlyn">@gistlyn</a> for updates.
+            Follow <a href="https://twitter.com/gistlyn">@gistlyn</a> for updates.
         </p>
 
     </div>
