Remove jspm + convert to webpack

--- a/src/Gistlyn.Resources/default.html
+++ b/src/Gistlyn.Resources/default.html
@@ -17,15 +17,10 @@
 
 <div id="app"></div>
 
-<script src="/system.js"></script>
-<script src="/config.js"></script>
+<script src="/dist/react.min.js"></script>
+<script src="/dist/react-dom.min.js"></script>
 
-<script src="/app.js"></script>
-
-<script>
-    System.import("./src/app");
-</script>
-
+<script src="/dist/bundle.js"></script>
 <script src="/platform.js"></script>
 
 </body>
