--- a/src/Gistlyn/default.html
+++ b/src/Gistlyn/default.html
@@ -24,20 +24,14 @@
 
 <div id="app"></div>
 
-<!-- build:js /system.js -->
-<script src="/jspm_packages/system.js"></script>
+<!-- build:js /dist/react.min.js -->
+<script src="/node_modules/react/dist/react.js"></script>
 <!-- endbuild -->
-<script src="/config.js"></script>
-<!-- build:remove -->
-<script src="/deps.lib.js"></script>
-<!-- endbuild -->
-<!-- htmlbuild:appbundle -->
+<!-- build:js /dist/react-dom.min.js -->
+<script src="/node_modules/react-dom/dist/react-dom.js"></script>
 <!-- endbuild -->
 
-<script>
-    System.import("./src/app");
-</script>
-
+<script src="/dist/bundle.js"></script>
 <script src="/platform.js"></script>
 
 </body>
