--- a/src/Gistlyn.Resources/offline.html
+++ b/src/Gistlyn.Resources/offline.html
@@ -72,15 +72,15 @@
         <p>
             Alternatively you can also run a local version of Gistlyn on your Desktop:
             <ul>
-                <li><a href="https://github.com/ServiceStack/dist/raw/master/Gistlyn/winforms-installer/Setup.exe">Windows Setup.exe</a> - Winforms Desktop App (requires .NET)</li>
-                <li><a href="https://github.com/ServiceStack/dist/raw/master/Gistlyn/Gistlyn-console.zip">Gistlyn-console.zip</a> - Console App for Windows/OSX/Linux (requires .NET or Mono)</li>
+                <li><a href="https://github.com/ServiceStack/Gistlyn/releases">Windows Setup.exe</a> - Winforms Desktop App (requires .NET)</li>
+                <li><a href="https://github.com/ServiceStack/Gistlyn/releases">Gistlyn-console.zip</a> - Console App for Windows/OSX/Linux (requires .NET or Mono)</li>
             </ul>
         </p>
 
         <p>&nbsp;</p>
 
         <p>
-            Follow <a href="twitter.com/gistlyn">@gistlyn</a> for updates.
+            Follow <a href="https://twitter.com/gistlyn">@gistlyn</a> for updates.
         </p>
 
     </div>
