update gen files

--- a/src/Gistlyn/offline.html
+++ b/src/Gistlyn/offline.html
@@ -60,12 +60,10 @@
 
     <div id="body">
         <p>
-            Gistlyn is currently offline and will be back shortly, in the meantime you can try
-            the alternative online version:
+            Gistlyn is currently offline and will be back shortly:
         </p>
         <ul>
             <li><a href="http://gistlyn.com">gistlyn.com</a> - Windows 2012 Server / .NET</li>
-            <li><a href="http://mono.gistlyn.com">mono.gistlyn.com</a> - Ubuntu / mono</li>
         </ul>
 
         <h3>Run Gistlyn on your Desktop</h3>
